修复无法登录问题和图标库文件夹大小写问题

--- a/Reggie.Blog/Views/Shared/_Layout.cshtml
+++ b/Reggie.Blog/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
         <!-- <script src="~/js/holder.js"></script> -->
-        <script src="~/lib/chart/dist/Chart.js"></script>
+        <script src="~/lib/Chart/dist/Chart.js"></script>
         <script src="~/js/plugins/summernote/summernote.js"></script>
         <script src="~/js/plugins/summernote/summernote-zh-CN.js"></script>
     </environment>
@@ -78,7 +78,7 @@
         </script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
         <!-- <script src="~/js/holder.min.js" asp-append-version="true"></script> -->
-        <script src="~/lib/chart/dist/Chart.min.js" asp-append-version="true"></script>
+        <script src="~/lib/Chart/dist/Chart.min.js" asp-append-version="true"></script>
         <script src="~/js/plugins/summernote/summernote.min.js" asp-append-version="true"></script>
         <script src="~/js/plugins/summernote/summernote-zh-CN.js" asp-append-version="true"></script>
     </environment>
