--- a/Reggie.Blog/Views/Account/Login.cshtml
+++ b/Reggie.Blog/Views/Account/Login.cshtml
@@ -16,7 +16,7 @@
 <div class="row">
     <div class="col-md-8">
         <section>
-            <form asp-controller="Home" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
+            <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
                 <h4>Use a local account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
