调试ubuntu下使用mysql用户验证不通过的问题

--- a/Reggie.Blog/Views/Shared/_ManageLayout.cshtml
+++ b/Reggie.Blog/Views/Shared/_ManageLayout.cshtml
@@ -79,6 +79,7 @@
         <a name="Skills" asp-controller="Manage" asp-action="Skills" class="btn-bracketed list-group-item col-sm-3">个人技能</a>
         <a name="JobExperiences" asp-controller="Manage" asp-action="JobExperiences" class="btn-bracketed list-group-item col-sm-3">工作经历</a>
         <a name="Samples" asp-controller="Manage" asp-action="Samples" class="btn-bracketed list-group-item col-sm-3">作品集</a>
+        <a name="ApplicationUsers" asp-controller="Manage" asp-action="ApplicationUsers" class="btn-bracketed list-group-item col-sm-3">用户管理</a>
     </div>
 
     <div class="body-content container">
