--- a/Reggie.Blog/Views/InformalEssays/Create.cshtml
+++ b/Reggie.Blog/Views/InformalEssays/Create.cshtml
@@ -33,11 +33,11 @@
                 <input asp-for="UserName" class="form-control" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>*@
-            @*<div class="form-group">
+            <div class="form-group">
                 <label asp-for="CreateDateTime" class="control-label"></label>
                 <input asp-for="CreateDateTime" class="form-control" />
                 <span asp-validation-for="CreateDateTime" class="text-danger"></span>
-            </div>*@
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
