--- a/Reggie.Upward.App/Reggie.Upward.App/MainWindow.xaml
+++ b/Reggie.Upward.App/Reggie.Upward.App/MainWindow.xaml
@@ -6,18 +6,20 @@
         xmlns:local="clr-namespace:Reggie.Upward.App"
         xmlns:controls="clr-namespace:Reggie.Upward.App.Controls"
         mc:Ignorable="d"
-        Title="Upward" Height="350" Width="525"
+        Title="Upward" SizeToContent="Height" Width="525"
         DataContext="{Binding Main, Source={StaticResource Locator}}">
-    <Grid>
-        <StackPanel HorizontalAlignment="Center" Width="240">
-            <ComboBox x:Name="cbxBrand" ItemsSource="{Binding Brands}" DisplayMemberPath="BrandName" IsSynchronizedWithCurrentItem="True" SelectionChanged="cbxBrand_SelectionChanged"/>
-            <TextBox x:Name="tbxFileUrl"></TextBox>
-            <Button Command="{Binding DownloadCommand}" CommandParameter="{Binding ElementName=tbxFileUrl,Path=Text}">下载</Button>
-            <ComboBox></ComboBox>
-            <Button Click="Button_Click">测试</Button>
-            <Grid MouseDown="Grid_MouseDown">
-                <Button Content="判断是否有路由"></Button>
-            </Grid>
-        </StackPanel>
-    </Grid>
+    <Viewbox Stretch="Uniform">
+        <Grid Width="525" x:Name="gdRoot">
+            <StackPanel HorizontalAlignment="Center" Width="240">
+                <ComboBox x:Name="cbxBrand" ItemsSource="{Binding Brands}" DisplayMemberPath="BrandName" IsSynchronizedWithCurrentItem="True" SelectionChanged="cbxBrand_SelectionChanged"/>
+                <TextBox x:Name="tbxFileUrl"></TextBox>
+                <Button Command="{Binding DownloadCommand}" CommandParameter="{Binding ElementName=tbxFileUrl,Path=Text}">下载</Button>
+                <ComboBox></ComboBox>
+                <Button Click="Button_Click" FontSize="24">测试</Button>
+                <Grid MouseDown="Grid_MouseDown">
+                    <Button Content="判断是否有路由"></Button>
+                </Grid>
+            </StackPanel>
+        </Grid>
+    </Viewbox>
 </Window>
