--- a/Reggie.WPF/DemoApp/DemoApp/MainWindow.xaml
+++ b/Reggie.WPF/DemoApp/DemoApp/MainWindow.xaml
@@ -18,5 +18,19 @@
                 </i:Interaction.Behaviors>
             </Border>
         </Canvas>
+        <StackPanel>
+            <TextBox x:Name="tbxKey" Text="SOFTWARE"></TextBox>
+
+            <Button x:Name="btnDeleteRegistryKey" Click="BtnDeleteRegistryKey_Click" Content="删除" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="Click">
+                        <ei:GoToStateAction/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </Button>
+
+            <TextBlock x:Name="tbTip"></TextBlock>
+        </StackPanel>
+
     </Grid>
 </Window>
